2001-10-24  Akim Demaille  <akim@epita.fr>

	* automake.in: Use &verbose.
	(&generate_makefile, &scan_texinfo_file, &scan_aclocal_m4): Use
	Automake::XFile.

2001-10-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/python.am (install-%DIR%PYTHON, uninstall-%DIR%PYTHON):
	Have the basename step optional and use %NDIR% instead of %DIR% in
	filenames in order to support 'nobase_'.

2001-10-24  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_languages, handle_single_transform_list,
	lang_c_rewrite): Use require_conf_file instead of
	require_config_file to require depcomp or compile from
	Makefile.am.  (This is a part of my patch of 2001-10-15 which got
	mistakenly reverted.)

2001-10-24  Akim Demaille  <akim@epita.fr>

	* tests/confh.test: Since 2001-10-20 Kevin Ryde, stamp-h is
	stamp-h1.

2001-10-24  Akim Demaille  <akim@epita.fr>

	Since the ansi2knr patch from 2001-10-20 Kevin Ryde, `$U' can
	appear in Makefile.in in the clean rule.

	* tests/cxxansi.test: Adjust.

2001-10-24  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_print_error, &am_file_error, &am_macro_error)
	(&am_target_error, &am_line_error, &am_conf_error, &am_file_warning):
	Rename as...
	(&print_error, &file_error, &macro_error, &target_error, &line_error)
	(&conf_error, &file_warning): these.
	(&file_warning): Fix the prototype and argument handling.
	(&am_line_warning): Remove, unused.

	Also, repair the misapplication of previous patches.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in ($ac_output_location): Replace with...
	($ac_config_files_location): this.
	(&scan_autoconf_traces): We don't need $file and $line, $here is
	enough.
	(&scan_one_autoconf_file): Use `$in_ac_output' to store the macro
	name (AC_OUTPUT or AC_CONFIG_FILES) for error messages.

2001-10-21  Akim Demaille  <akim@epita.fr>

	* automake.in (&require_file_with_macro): Use &require_file.
	(&read_am_file): Move the definition of $here at its proper place.
