@@ -1,3 +1,9 @@
+2001-10-26  Akim Demaille  <akim@epita.fr>
+
+	* automake.in ($canonical_location): New.
+	Use it.
+	(&require_config_file, $line_error): Remove.
+
 2001-10-24  Akim Demaille  <akim@epita.fr>
 
 	* automake.in: Use &verbose.
